--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,11 @@
   "orientation": "portrait-primary",
   "icons": [
     {
+      "src": "/favicon.ico",
+      "sizes": "32x32",
+      "type": "image/x-icon"
+    },
+    {
       "src": "/images/logos/webdevakash.png",
       "sizes": "192x192",
       "type": "image/png",
