Site redesign: editorial case study; JSX-only; hero overhaul; Why Choose Me bento; guarantees strip; 360° journey; testimonials carousel + schema; tag cloud; contact/footer E-E-A-T; palette/gradients; remove sticky subnav; wire CryptoAnalysis live/repo; portfolio card; SEO/Person schema updates

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@next/third-parties": "^14.2.5",
+    "@types/node": "24.2.0",
+    "@types/react": "19.1.9",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
