--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,12 @@
       "type": "image/x-icon"
     },
     {
+      "src": "/favicon-ak.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
       "src": "/images/logos/webdevakash.png",
       "sizes": "192x192",
       "type": "image/png",
