Fix blog code blocks and responsive layout
- Enhanced code block styling with editor-like appearance
- Added traffic light dots and copy functionality to code blocks
- Fixed horizontal scrolling issues across all screen sizes
- Improved mobile header spacing for blog detail pages
- Removed language badges from code block headers for cleaner look
- Added proper overflow handling and word wrapping
- Installed react-syntax-highlighter for future enhancements

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "framer-motion": "^11.0.0",
     "next": "14.2.5",
+    "prettier": "3.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-syntax-highlighter": "^15.6.6"
   },
   "devDependencies": {
     "@next/third-parties": "^14.2.5",
